# avrsense

./: CMakeLists.txt  avr.cmake  lesson1.c
lesson2/: lesson2.c
lesson2/commandline/: lesson2client.c
lesson2/firmware/: lesson2.c
lesson2/usbdrv/: usbconfig.h
lesson3/: .main.c.swp  global-conf.h  main.c
lesson3/apps/hello-world/.svn/: all-wcprops  entries
lesson3/apps/simple-httpd/: .simple-httpd.h.swp
lesson3/apps/simple-httpd/.svn/: all-wcprops  entries
lesson3/drivers/enc28j60/.svn/: all-wcprops  entries
lesson3/drivers/interfaces/.svn/: all-wcprops  entries
lesson3/uip/.svn/: all-wcprops  entries
usbdrv/: .Readme.txt.swp  .usbconfig.h.swp  usbconfig.h
